<resources>
    <string name="app_name">AllPrintApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jorge Leitão</string>
    <string name="nav_header_subtitle">geral@allprint.pt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Definições</string>

    <string name="menu_home">Encomendas</string>
    <string name="menu_loja">Loja</string>
    <string name="menu_pesquisa">Pesquisar</string>
    <string name="menu_categorias">Categorias</string>
    <string name="loading">A carregar Cenas</string>

    <string name="home_second">Home Second</string>
    <string name="guest_register_here">Esqueceu a Password?</string>
    <string name="enter_username">E-Mail....</string>
    <string name="enter_password">Palavra Passe...</string>
    <string name="login">Entrar</string>
    <string name="menu_logout">Logout</string>
    <string name="definicoes">Definições</string>
    <string name="entrar">ENTRAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_item">Item selecionado</string>
</resources>
