<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_loja"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_loja" />

        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_categorias" />

        <item
            android:id="@+id/nav_pesquisa"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/menu_pesquisa" />

        <item android:title="@string/defnicoes">
            <menu>
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_logout" />
            </menu>
        </item>
    </group>
</menu>
